# vulkan-renderer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  README.md  camera_data.toml  cmake_install.cmake  compile_shaders.bat  compile_shaders.py  imgui.ini  shader_preprocessor.py
cmake/: Findglfw3.cmake
cmake/modules/: FindGLFW3.cmake
scenes/: bistro.toml  lightbulb.toml  mat_demo.toml  mat_demo_sky.toml  mosquito.toml  sponza_lit.toml  sponza_sun.toml  test.toml  test_area_light.toml  test_simple.toml  test_simple_sky.toml  test_small.toml  test_transmission.toml  transmission_test.toml
scenes/gltf/area_light_test/: test.gltf
scenes/gltf/brass_vase/: brass_vase_03_4k.gltf
scenes/gltf/lightbulb/: lightbulb_01_4k.gltf
scenes/gltf/marble_bust/: marble_bust_01_4k.gltf  marble_bust_01_8k.gltf
scenes/gltf/plane/: untitled.gltf
scenes/gltf/round_table/: round_wooden_table_01_8k.gltf
scenes/gltf/simple_test/: untitled.gltf
scenes/gltf/test/: test.gltf
scenes/gltf/test_sphere/: slate_floor_2k.gltf
scenes/gltf/transmission_small/: untitled.gltf
shaders/: camera.glsl  closest_hit.rchit  closest_hit.spv  color.glsl  common.glsl  environment.glsl  ggx.glsl  interface.glsl  lambert.glsl  lights.glsl  material.rcall  material_glass.rcall  material_lambertian.rcall  material_light.rcall  material_mirror.rcall  material_parameters.glsl  material_phong.rcall  mesh_data.glsl  mis.glsl  miss.rmiss  miss.rmiss.spv  miss.spv  occlusion_hit.rchit  occlusion_miss.rmiss  payload.glsl  push_constants.glsl  random.glsl  ray_gen.rgen  ray_gen.spv  sampling.glsl  structs.glsl  test.rcall  test.rcall.spv  texture_data.glsl
shaders/bsdf/: bsdf.glsl  fresnel.glsl  ggx.glsl  lambertian.glsl  principled.glsl  sampling.glsl  spec.glsl
shaders/bsdf/lobes/: diffuse.glsl  specular.glsl  transmission.glsl
shaders/meta/: closest_hit.rchit  material.rcall  material_glass.rcall  material_lambertian.rcall  material_light.rcall  material_mirror.rcall  material_phong.rcall  miss.rmiss  nee_miss.rmiss  params.json  ray_gen.rgen
shaders/processing/: interface.glsl  restir_initial_temporal.comp  restir_initial_temporal.comp.spv  restir_spatial.comp  restir_spatial.comp.spv  test.comp  test.comp.spv  upscale.comp  upscale.comp.spv
shaders/raytracing/: bsdf.glsl  closest_hit.rchit.spv  common.glsl  environment.glsl  fresnel.glsl  ggx.glsl  interface.glsl  lambert.glsl  lights.glsl  material.glsl  mesh_data.glsl  miss.rmiss  output.glsl  principled.glsl  push_constants.glsl  random.glsl  ray_gen.rgen  ray_gen.rgen.spv  restir.glsl  sampling.glsl  structs.glsl  texture_data.glsl
shaders/raytracing/default/: closest_hit.rchit  closest_hit.rchit.spv  miss.rmiss  miss.rmiss.spv  occlusion_hit.rchit  occlusion_miss.rmiss  payload.glsl  ray_gen.rgen  ray_gen.rgen.spv
shaders/spirv/: closest_hit.rchit  closest_hit.spv  material.spv  material_glass.spv  material_lambertian.spv  material_light.spv  material_mirror.spv  material_phong.spv  miss.rmiss  miss.spv  nee_miss.spv  ray_gen.rgen  ray_gen.spv
src/: CMakeLists.txt  buffer.cpp  buffer.h  cmake_install.cmake  device.cpp  device.h  exr_export.cpp  exr_export.h  glsl_compiler.cpp  glsl_compiler.h  image.cpp  image.h  main.cpp  memory.h  pipeline_builder.cpp  pipeline_builder.h  shader_compiler.cpp  shader_compiler.h  shader_interface.h  ui.cpp  ui.h  vulkan.h  vulkan_application.cpp  vulkan_application.h
src/core/: buffer.cpp  buffer.h  color.h  device.cpp  device.h  image.cpp  image.h  memory.cpp  memory.h  vulkan.h
src/imgui/: CMakeLists.txt
src/loaders/: environment.cpp  environment.h  geometry.cpp  geometry.h  geometry_gltf.cpp  geometry_gltf.h  geometry_obj.cpp  geometry_obj.h  image.cpp  image.h  scene.cpp  scene.h  shader_spirv.h  toml.hpp
src/mikktspace/: mikktspace.c
src/pipeline/: pipeline_builder.cpp  pipeline_builder.h  pipeline_stage.cpp  pipeline_stage.h  pipeline_stage_simple.cpp  pipeline_stage_simple.h
src/pipeline/process/: pipeline_stage.h
src/pipeline/processing/: compute_shader.cpp  compute_shader.h  pipeline_builder.cpp  pipeline_builder.h  pipeline_stage.h  pipeline_stage_oidn.cpp  pipeline_stage_oidn.h  pipeline_stage_restir.cpp  pipeline_stage_restir.h  pipeline_stage_restir_spatial.cpp  pipeline_stage_restir_spatial.h  pipeline_stage_simple.cpp  pipeline_stage_simple.h  pipeline_stage_upscale.cpp  pipeline_stage_upscale.h
src/pipeline/raytracing/: pipeline_builder.cpp  pipeline_builder.h  pipeline_stage.cpp  pipeline_stage.h  pipeline_stage_simple.cpp  pipeline_stage_simple.h
src/processors/: gltf_processor.cpp  gltf_processor.h
src/processors/gltf/: gltf_processor.cpp  gltf_processor.h
