add_subdirectory(imgui)

set(SRC_RENDERER
    ${SRC_IMGUI}
    src/shader_compiler.cpp
    src/core/memory.cpp
    src/core/buffer.cpp
    src/core/device.cpp
    src/core/image.cpp
    src/loaders/mikktspace/mikktspace.c
    src/loaders/geometry.cpp
    src/loaders/geometry_gltf.cpp
    src/loaders/image.cpp
    src/loaders/scene.cpp
    src/loaders/environment.cpp
    src/processors/gltf/gltf_processor.cpp
    src/pipeline/raytracing/pipeline_stage.cpp
    src/pipeline/raytracing/pipeline_stage_simple.cpp
    src/pipeline/raytracing/pipeline_builder.cpp
    src/pipeline/processing/pipeline_builder.cpp
    src/ui.cpp
    src/vulkan_application.cpp
    src/main.cpp
PARENT_SCOPE)